; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_sony-laptop.c_sony_walk_callback.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_sony-laptop.c_sony_walk_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device_info = type { i32, i32 }

@.str = private unnamed_addr constant [30 x i8] c"method: name: %4.4s, args %X\0A\00", align 1
@AE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*, i8**)* @sony_walk_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sony_walk_callback(i32 %0, i32 %1, i8* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca %struct.acpi_device_info*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8** %3, i8*** %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @acpi_get_object_info(i32 %10, %struct.acpi_device_info** %9)
  %12 = call i64 @ACPI_SUCCESS(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %4
  %15 = load %struct.acpi_device_info*, %struct.acpi_device_info** %9, align 8
  %16 = getelementptr inbounds %struct.acpi_device_info, %struct.acpi_device_info* %15, i32 0, i32 1
  %17 = bitcast i32* %16 to i8*
  %18 = load %struct.acpi_device_info*, %struct.acpi_device_info** %9, align 8
  %19 = getelementptr inbounds %struct.acpi_device_info, %struct.acpi_device_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @pr_warn(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i8* %17, i32 %20)
  %22 = load %struct.acpi_device_info*, %struct.acpi_device_info** %9, align 8
  %23 = call i32 @kfree(%struct.acpi_device_info* %22)
  br label %24

24:                                               ; preds = %14, %4
  %25 = load i32, i32* @AE_OK, align 4
  ret i32 %25
}

declare dso_local i64 @ACPI_SUCCESS(i32) #1

declare dso_local i32 @acpi_get_object_info(i32, %struct.acpi_device_info**) #1

declare dso_local i32 @pr_warn(i8*, i8*, i32) #1

declare dso_local i32 @kfree(%struct.acpi_device_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
